More CSS changes.

--- a/src/styles/Buttons.module.css
+++ b/src/styles/Buttons.module.css
@@ -46,3 +46,12 @@
     color: white;
     border: 2px solid white;
   }
+
+  .ratingbutton {
+    position: relative;
+    bottom: 200px;
+    left: 200px;
+    opacity: 75%;
+    border-radius: 100%;
+    display: flex;   
+  }
